Fix: 16px gap for each flex item

--- a/flex/03-flex-header-2/style.css
+++ b/flex/03-flex-header-2/style.css
@@ -26,12 +26,12 @@ body {
 
 .links {
   display: flex;
-  gap: 1rem;
+  gap: 16px;
 }
 
 .right-links {
   display: flex;
-  gap: 1rem;
+  gap: 16px;
 }
 
 
